Este es el segundo cambio

--- a/prueba.html
+++ b/prueba.html
@@ -10,5 +10,6 @@
     <br>
     <p>Esto es una prueba</p>
     <p>Otra prueba</p>
+    <!-- Prueba -->
 </body>
-</html><!-- contenedor 3 -->
+</html>
