Cambio de color de fondo

--- a/prueba.html
+++ b/prueba.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="test/estilos.css">
 </head>
-<body>
-    <center>
-    <h1>Hola</h1>
-    <br>
-    <p>Otra prueba</p>
-    <br>
-    <h4>Nombre</h4>
-    <input type="text" id="nombre" placeholder="Nombre">
-    <br>
-    <h4>Números</h4>
-    <input type="text" id="cambiar"placeholder="numeros">
-</center>
+<body id="body">
+<div class="centro">
+    <div class="conten">
+        <h1>Hola</h1>
+        <br>
+        <p>Otra prueba</p>
+        <br>
+        <h4>Nombre</h4>
+        <input type="text" id="nombre" placeholder="Nombre">
+        <br>
+        <h4>Números</h4>
+        <input type="text" id="cambiar"placeholder="numeros">
+    </div>
+    <div class="contenedor">
+        <div class="contenido" id="1" style="background-color: aqua; "></div>
+        <div class="contenido" id="2" style="background-color: red; "></div>
+        <div class="contenido" id="3" style="background-color: blueviolet; "></div>
+        <div class="contenido" id="4" style="background-color: brown; "></div>
+    </div>
+</div>
 </body>
 <script src="prueba2/prueba2.js"></script>
+<script src="prueba2/change_back.js"></script>
 </html>
